--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,9 +104,9 @@ flutter:
         - asset: fonts/DancingScript-Bold.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Lora
+      fonts:
+        - asset: fonts/Lora-VariableFont_wght.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
