--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -54,7 +54,7 @@ dependencies:
   pdf: ^3.8.4
   pdf_viewer_plugin: ^2.0.1
   path_provider: ^2.0.11
-  open_file: ^3.2.1
+  open_filex: ^4.3.2
   flutter_toastr: ^1.0.3
 
 
